--- a/index.html
+++ b/index.html
@@ -138,24 +138,27 @@
 /* 320px - 576px */
 @media screen and (max-width: 576px) {
 	.container {
-		width: 90%;
+		width: 70%;
 	}
     .phone-adaptive{
         display: flex;
         justify-content: space-around;
         align-items:center;
+        padding-left: 10px;
+        padding-right: 10px;
     }
     .sights{
-        flex-direction: column;  
+        flex-direction: column; 
+        align-content: space-between; 
     }
     h2{
-        inline-size: 200px;
+        inline-size: 180px;
         font-size: 12px; 
         line-height: 15px;     
     } 
     img{
-        width: 120px;
-        
+        width: 90%;
+
     }
     button{
         width: 120px;
@@ -167,6 +170,9 @@
         font-size: 40px;
         font-weight: 800;
     }
+    footer{
+            font-size: 10px;
+        }
 }
 
     </style>
